# balotachain

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .prettierignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  crypto_review.yml  feature_request.yml
.github/workflows/: ci.yml  ffi.yml
apps/: README.md
apps/admin/: README.md  index.html  package.json  vitest.config.ts
apps/admin/src/: App.test.tsx  App.tsx
apps/admin/src-tauri/: Cargo.toml  tauri.conf.json
apps/admin/src-tauri/src/: balota.rs  lib.rs  main.rs
apps/admin/src/components/: Chip.tsx  Stepper.tsx
apps/admin/src/lib/: bulletin.test.ts  bulletin.ts
apps/admin/src/mocks/: defaults.ts
apps/auditor/: README.md  index.html  package.json  vite.config.ts
apps/auditor/src/: App.test.tsx  App.tsx  main.tsx
apps/auditor/src-tauri/: Cargo.toml  tauri.conf.json
apps/auditor/src-tauri/src/: balota.rs  lib.rs  main.rs
apps/auditor/src/components/: Card.tsx  Chip.tsx  ResultBar.tsx  StatCard.tsx
apps/auditor/src/lib/: bulletin.test.ts  bulletin.ts  tally.test.ts  tally.ts
apps/auditor/src/mocks/: results.ts
apps/balotachain/: README.md  package.json  tsconfig.json
apps/balotachain/src/: index.ts
apps/trustee/: README.md  index.html  package.json
apps/trustee/src/: App.test.tsx  App.tsx
apps/trustee/src-tauri/: Cargo.toml  tauri.conf.json
apps/trustee/src-tauri/src/: balota.rs  lib.rs  main.rs
apps/trustee/src/components/: Card.tsx  Chip.tsx  ProgressBar.tsx
apps/trustee/src/lib/: bulletin.test.ts  bulletin.ts
apps/trustee/src/mocks/: trustee.ts
apps/voter/: .metadata  README.md  pubspec.yaml
apps/voter/android/app/: build.gradle.kts
apps/voter/android/app/src/main/: AndroidManifest.xml
apps/voter/ios/Runner/: Info.plist
apps/voter/ios/Runner.xcodeproj/: project.pbxproj
apps/voter/lib/: main.dart
apps/voter/lib/data/: bulletin_store.dart  mock_candidates.dart
apps/voter/lib/design/: design.dart  theme.dart  tokens.dart
apps/voter/lib/design/widgets/: card.dart  icons.dart  option_card.dart  page_dots.dart  primary_button.dart  secondary_button.dart  text_button.dart  text_input.dart  top_bar.dart
apps/voter/lib/screens/: ballot_screen.dart  election_home_screen.dart  email_login_screen.dart  onboarding_screen.dart  review_screen.dart  splash_screen.dart  verification_screen.dart  vote_submitted_screen.dart
apps/voter/lib/services/: encrypt_service.dart
apps/voter/lib/state/: ballot.dart
apps/voter/linux/: CMakeLists.txt
apps/voter/linux/runner/: my_application.cc
apps/voter/macos/Runner.xcodeproj/: project.pbxproj
apps/voter/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
apps/voter/macos/Runner/Configs/: AppInfo.xcconfig
apps/voter/test/data/: bulletin_store_test.dart  http_bulletin_store_test.dart
apps/voter/test/services/: encrypt_service_test.dart
crates/balota-encrypt/: Cargo.toml
crates/balota-encrypt/src/: lib.rs  main.rs
crates/balota-encrypt/tests/: cli.rs
crates/bulletin-gateway/: Cargo.toml
crates/bulletin-gateway/src/: lib.rs  main.rs
crates/bulletin-store/: Cargo.toml
crates/bulletin-store/src/: lib.rs
crates/bulletin-store/tests/: http_source.rs
crates/e2e-runner/: Cargo.toml
crates/e2e-runner/src/: lib.rs  main.rs
crates/e2e-runner/tests/: e2e.rs
docker/: README.md  bulletin-gateway.Dockerfile
docs/: README.md  bulletin-store-schema.md  dev-environment.md
docs/adr/: 0002-monorepo-workspace-layout.md  0002-rename-to-saksi-and-split-framework-repo.md  0003-protocol-buffers-for-wire-serialization.md  0004-merlin-fiat-shamir-transcripts.md
docs/architecture/: 2026-05-20-initial-architecture-decisions.md
docs/plans/: 2026-06-14-balotachain-ui-demo-plan.md
docs/updates/: 2026-06-14-phase-0-3-shipped.md
services/fabric-adapter/: go.mod  go.sum  main.go  mapping.go  mapping_test.go
spec/: README.md
tools/: README.md  bootstrap.ps1  bootstrap.sh
(+1 files in other folders)
