[package]
name = "bulletin-store"
version = "0.0.0"
edition = "2024"
license = "Apache-2.0"
description = "BalotaChain demo bulletin store. File-backed stand-in for Hyperledger Fabric chaincode while Docker/Go are unavailable on the dev machine."

[lib]
name = "bulletin_store"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
