[package]
name = "auditor"
version = "0.1.0"
description = "BalotaChain public auditor"
authors = ["BalotaChain contributors"]
edition = "2021"

[lib]
name = "auditor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bulletin-store = { path = "../../../crates/bulletin-store" }

[dev-dependencies]
tempfile = "3"
